refactored idNumber to GhanacardNumber to make it intuitive
